Revision history for Async-Methods

0.000003 - 2020-04-24
  - Inline Mojo::Promise::Role::Get logic

0.000002 - 2020-04-18
  - Add tests, fix bugs, write docs

0.000001 - 2020-04-08
  - Initial release